SERVER-1180 check free space in repair path